fix map on mobile

--- a/lesson4/css/main.css
+++ b/lesson4/css/main.css
@@ -104,6 +104,7 @@ footer a.map {
 
 footer a img {
   border: 1px solid #007168;
+  max-width: 100%;
 }
 
 img.hero {
